[gd_scene load_steps=52 format=3 uid="uid://eslm5tlm5l32"]

[ext_resource type="Script" uid="uid://cq7lcrsqw860f" path="res://scripts/timer_selection.gd" id="1_p2gch"]
[ext_resource type="Texture2D" uid="uid://c6q53hbadsdhn" path="res://assets/animation/background/nature_4/1.png" id="1_t6aj4"]
[ext_resource type="Texture2D" uid="uid://dyimwhkjfv70o" path="res://assets/animation/background/nature_4/4.png" id="2_p2gch"]
[ext_resource type="Texture2D" uid="uid://cfjg6er43b6qt" path="res://assets/animation/background/nature_4/3.png" id="3_5t322"]
[ext_resource type="Texture2D" uid="uid://bofb6w4p78k0u" path="res://assets/animation/background/nature_4/2.png" id="4_m6oqy"]
[ext_resource type="Texture2D" uid="uid://douajqs02guic" path="res://assets/buttons/back.png" id="6_5t322"]
[ext_resource type="Texture2D" uid="uid://c5w1pngf52lbu" path="res://assets/buttons/2 min.png" id="6_cn0yk"]
[ext_resource type="Texture2D" uid="uid://vivkoxltoqc0" path="res://assets/buttons/5 min.png" id="7_lf5fq"]
[ext_resource type="Texture2D" uid="uid://b23iq3tys6lmm" path="res://assets/buttons/10 min.png" id="8_5e438"]
[ext_resource type="Texture2D" uid="uid://cden8s4w1at6u" path="res://assets/animation/title/timer-animation/timer-animation - 1.png" id="10_0x221"]
[ext_resource type="Texture2D" uid="uid://bukn6kbyyn70s" path="res://assets/animation/title/timer-animation/timer-animation - 2.png" id="11_ciosj"]
[ext_resource type="Texture2D" uid="uid://bc2yxuf7vc20s" path="res://assets/animation/title/timer-animation/timer-animation - 3.png" id="12_ar7re"]
[ext_resource type="Texture2D" uid="uid://c0q1g2tmbr04o" path="res://assets/animation/title/timer-animation/timer-animation - 4.png" id="13_u3wvq"]
[ext_resource type="Texture2D" uid="uid://ci384emw0lcl1" path="res://assets/animation/title/timer-animation/timer-animation - 5.png" id="14_ys6dq"]
[ext_resource type="Texture2D" uid="uid://cpopxoy2byd6p" path="res://assets/animation/title/timer-animation/timer-animation - 6.png" id="15_7kn57"]
[ext_resource type="Texture2D" uid="uid://d4ewe6lfdaj6o" path="res://assets/animation/title/timer-animation/timer-animation - 7.png" id="16_6cqie"]
[ext_resource type="Texture2D" uid="uid://ctyppknypr2yt" path="res://assets/animation/title/timer-animation/timer-animation - 8.png" id="17_hohpc"]
[ext_resource type="Texture2D" uid="uid://cuabu4g1w2rjl" path="res://assets/animation/title/timer-animation/timer-animation - 9.png" id="18_8e17g"]
[ext_resource type="Texture2D" uid="uid://cx4vfokidocvb" path="res://assets/animation/title/timer-animation/timer-animation - 10.png" id="19_n6ue1"]
[ext_resource type="Texture2D" uid="uid://ch4jtwet0awgx" path="res://assets/animation/title/timer-animation/timer-animation - 11.png" id="20_g3lt8"]
[ext_resource type="Texture2D" uid="uid://cx7dmf1fgkrme" path="res://assets/animation/title/timer-animation/timer-animation - 12.png" id="21_be3mj"]
[ext_resource type="Texture2D" uid="uid://brjkgudw4v01q" path="res://assets/animation/title/timer-animation/timer-animation - 13.png" id="22_ste61"]
[ext_resource type="Texture2D" uid="uid://dlmndy5a6pcot" path="res://assets/animation/title/timer-animation/timer-animation - 14.png" id="23_12d61"]
[ext_resource type="Texture2D" uid="uid://bl0pbv68j0hcr" path="res://assets/animation/title/timer-animation/timer-animation - 15.png" id="24_ts37u"]
[ext_resource type="Texture2D" uid="uid://cdo0sjusw6c5o" path="res://assets/animation/title/timer-animation/timer-animation - 16.png" id="25_85qwm"]
[ext_resource type="Texture2D" uid="uid://y1kb0eqvtbcw" path="res://assets/animation/title/timer-animation/timer-animation - 17.png" id="26_8nsar"]
[ext_resource type="Texture2D" uid="uid://5l25dskiahmi" path="res://assets/animation/title/timer-animation/timer-animation - 18.png" id="27_o4g7s"]
[ext_resource type="Texture2D" uid="uid://dceyd2qvy7ltk" path="res://assets/animation/title/timer-animation/timer-animation - 19.png" id="28_3ho0s"]
[ext_resource type="Texture2D" uid="uid://bohjd6gr6r2rs" path="res://assets/animation/title/timer-animation/timer-animation - 20.png" id="29_saeyu"]
[ext_resource type="Texture2D" uid="uid://bnsqsmr2rgbbq" path="res://assets/animation/title/timer-animation/timer-animation - 21.png" id="30_seyvy"]
[ext_resource type="Texture2D" uid="uid://bqhr3oj2p3pdr" path="res://assets/animation/title/timer-animation/timer-animation - 22.png" id="31_c60cr"]
[ext_resource type="Texture2D" uid="uid://h5gosypiwlam" path="res://assets/animation/title/timer-animation/timer-animation - 23.png" id="32_3ueg0"]
[ext_resource type="Texture2D" uid="uid://bkpxhugv0kp4h" path="res://assets/animation/title/timer-animation/timer-animation - 24.png" id="33_t470l"]
[ext_resource type="Texture2D" uid="uid://x58rgssjvk7o" path="res://assets/animation/title/timer-animation/timer-animation - 25.png" id="34_7hybj"]
[ext_resource type="AudioStream" uid="uid://csjm46gsdq2em" path="res://music/button-sound.mp3" id="35_lf5fq"]

[sub_resource type="Animation" id="Animation_a8gd2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bush:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(698.5, 327)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("trees:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(702, 325.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("cloud:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(701.5, 332.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("bush2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1631.5562, 328.50003)]
}

[sub_resource type="Animation" id="Animation_j7ex8"]
resource_name = "background animation"
loop_mode = 1
step = 0.016666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bush:position")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.33333334, 0.6666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(698.5, 327), Vector2(105.50006, 327.00003), Vector2(-693.49994, 327)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("trees:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(702, 325.5), Vector2(108.00006, 325.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("cloud:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(701.5, 332.5), Vector2(539.5, 332.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("bush2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.33333334, 0.6666667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(2222.6987, 328.50003), Vector2(1628.052, 328.50003), Vector2(833.5562, 328.50003), Vector2(-24.443787, 328.50003)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hstxw"]
_data = {
&"RESET": SubResource("Animation_a8gd2"),
&"background animation": SubResource("Animation_j7ex8")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_baipi"]
atlas = ExtResource("6_cn0yk")
region = Rect2(0, 0, 256, 119.64328)

[sub_resource type="AtlasTexture" id="AtlasTexture_vschu"]
atlas = ExtResource("6_cn0yk")
region = Rect2(0, 272.09744, 256, 111.90256)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgujy"]
atlas = ExtResource("6_cn0yk")
region = Rect2(0, 135.57619, 256, 120.00069)

[sub_resource type="AtlasTexture" id="AtlasTexture_psv3h"]
atlas = ExtResource("7_lf5fq")
region = Rect2(0, 0, 256, 120.0701)

[sub_resource type="AtlasTexture" id="AtlasTexture_wemxd"]
atlas = ExtResource("7_lf5fq")
region = Rect2(-1.2990875, 272.8636, 256.8133, 110.648285)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohj0y"]
atlas = ExtResource("7_lf5fq")
region = Rect2(0, 135.48163, 256, 120.79755)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6ksi"]
atlas = ExtResource("8_5e438")
region = Rect2(0, 0, 256, 119.68957)

[sub_resource type="AtlasTexture" id="AtlasTexture_j71ei"]
atlas = ExtResource("8_5e438")
region = Rect2(0, 271.91473, 256, 112.085266)

[sub_resource type="AtlasTexture" id="AtlasTexture_yv8um"]
atlas = ExtResource("8_5e438")
region = Rect2(0, 135.13156, 256, 121.57651)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6oqy"]
atlas = ExtResource("6_5t322")
region = Rect2(0, 0, 255.50668, 119.95656)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2pdb"]
atlas = ExtResource("6_5t322")
region = Rect2(-0.47233582, 273.9316, 256.8357, 110.07242)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8vtu"]
atlas = ExtResource("6_5t322")
region = Rect2(0.18688965, 136.72728, 256.27118, 119.46248)

[sub_resource type="SpriteFrames" id="SpriteFrames_euc3t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_0x221")
}, {
"duration": 1.0,
"texture": ExtResource("11_ciosj")
}, {
"duration": 1.0,
"texture": ExtResource("12_ar7re")
}, {
"duration": 1.0,
"texture": ExtResource("13_u3wvq")
}, {
"duration": 1.0,
"texture": ExtResource("14_ys6dq")
}, {
"duration": 1.0,
"texture": ExtResource("15_7kn57")
}, {
"duration": 1.0,
"texture": ExtResource("16_6cqie")
}, {
"duration": 1.0,
"texture": ExtResource("17_hohpc")
}, {
"duration": 1.0,
"texture": ExtResource("18_8e17g")
}, {
"duration": 1.0,
"texture": ExtResource("19_n6ue1")
}, {
"duration": 1.0,
"texture": ExtResource("20_g3lt8")
}, {
"duration": 1.0,
"texture": ExtResource("21_be3mj")
}, {
"duration": 1.0,
"texture": ExtResource("22_ste61")
}, {
"duration": 1.0,
"texture": ExtResource("23_12d61")
}, {
"duration": 1.0,
"texture": ExtResource("24_ts37u")
}, {
"duration": 1.0,
"texture": ExtResource("25_85qwm")
}, {
"duration": 1.0,
"texture": ExtResource("26_8nsar")
}, {
"duration": 1.0,
"texture": ExtResource("27_o4g7s")
}, {
"duration": 1.0,
"texture": ExtResource("28_3ho0s")
}, {
"duration": 1.0,
"texture": ExtResource("29_saeyu")
}, {
"duration": 1.0,
"texture": ExtResource("30_seyvy")
}, {
"duration": 1.0,
"texture": ExtResource("31_c60cr")
}, {
"duration": 1.0,
"texture": ExtResource("32_3ueg0")
}, {
"duration": 1.0,
"texture": ExtResource("33_t470l")
}, {
"duration": 1.0,
"texture": ExtResource("34_7hybj")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[node name="timer_selection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p2gch")

[node name="background" type="Node" parent="."]

[node name="sky" type="Sprite2D" parent="background"]
z_index = -20
position = Vector2(404.5, 325.5)
scale = Vector2(1.3975694, 2.0339506)
texture = ExtResource("1_t6aj4")

[node name="bush2" type="Sprite2D" parent="background"]
z_index = -1
position = Vector2(1631.5562, 328.50003)
scale = Vector2(2.8730693, 2.0092592)
texture = ExtResource("2_p2gch")

[node name="bush" type="Sprite2D" parent="background"]
z_index = -1
position = Vector2(698.5, 327)
scale = Vector2(2.4184027, 2.0246913)
texture = ExtResource("2_p2gch")

[node name="trees" type="Sprite2D" parent="background"]
visible = false
z_index = -2
position = Vector2(702, 325.5)
scale = Vector2(2.4270833, 2.021605)
texture = ExtResource("3_5t322")

[node name="cloud" type="Sprite2D" parent="background"]
z_index = -3
position = Vector2(701.5, 332.5)
scale = Vector2(3.03125, 2.6327157)
texture = ExtResource("4_m6oqy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="background"]
libraries = {
&"": SubResource("AnimationLibrary_hstxw")
}
autoplay = "background animation"
speed_scale = 0.01

[node name="buttons" type="Node" parent="."]

[node name="2min" type="TextureButton" parent="buttons"]
offset_left = 285.0
offset_top = 192.0
offset_right = 541.0
offset_bottom = 311.0
scale = Vector2(0.8, 0.8)
texture_normal = SubResource("AtlasTexture_baipi")
texture_pressed = SubResource("AtlasTexture_vschu")
texture_hover = SubResource("AtlasTexture_cgujy")

[node name="5min" type="TextureButton" parent="buttons"]
offset_left = 289.00003
offset_top = 306.00003
offset_right = 545.00006
offset_bottom = 426.00003
scale = Vector2(0.8, 0.8)
texture_normal = SubResource("AtlasTexture_psv3h")
texture_pressed = SubResource("AtlasTexture_wemxd")
texture_hover = SubResource("AtlasTexture_ohj0y")

[node name="10min" type="TextureButton" parent="buttons"]
offset_left = 286.00003
offset_top = 411.00003
offset_right = 542.00006
offset_bottom = 530.00006
scale = Vector2(0.8, 0.8)
texture_normal = SubResource("AtlasTexture_j6ksi")
texture_pressed = SubResource("AtlasTexture_j71ei")
texture_hover = SubResource("AtlasTexture_yv8um")

[node name="backbutton" type="TextureButton" parent="buttons"]
offset_left = 616.0
offset_top = 535.0
offset_right = 871.0
offset_bottom = 654.0
scale = Vector2(0.6, 0.6)
texture_normal = SubResource("AtlasTexture_m6oqy")
texture_pressed = SubResource("AtlasTexture_u2pdb")
texture_hover = SubResource("AtlasTexture_o8vtu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(379, 82)
scale = Vector2(1.945, 1.6)
sprite_frames = SubResource("SpriteFrames_euc3t")
autoplay = "default"

[node name="click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("35_lf5fq")

[connection signal="pressed" from="buttons/2min" to="." method="_on_2min_pressed"]
[connection signal="pressed" from="buttons/5min" to="." method="_on_5min_pressed"]
[connection signal="pressed" from="buttons/10min" to="." method="_on_10min_pressed"]
[connection signal="pressed" from="buttons/backbutton" to="." method="_on_backbutton_pressed"]
